# gastosmart

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py
tests/: test_app.py
