[project]
name = "gastosmart"
version = "1.0.0"
description = "Gerenciador de gastos pessoais via CLI"
requires-python = ">=3.10"

[project.scripts]
gastosmart = "src.app:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
